<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sem"
    tools:context="com.example.gusta.myapplication.SegundaTela">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/qtl"
            android:textColor="@color/botcol"
            android:textSize="30sp" />

        <RadioGroup
            android:id="@+id/elo"
            android:layout_width="200dp"
            android:layout_height="420dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="27dp">

            <RadioButton
                android:id="@+id/bronze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imageView8"
                android:layout_alignRight="@+id/imageView8"
                android:layout_alignTop="@+id/imageView3"
                android:layout_marginEnd="21dp"
                android:layout_marginRight="21dp"
                android:layout_weight="1"
                android:buttonTint="@color/bcol"
                android:text="@string/bronze"
                android:textColor="@color/botcol" />

            <RadioButton
                android:id="@+id/prata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/bcol"
                android:text="@string/prata"
                android:textColor="@color/botcol" />

            <RadioButton
                android:id="@+id/ouro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/bcol"
                android:text="@string/ouro"
                android:textColor="@color/botcol" />

            <RadioButton
                android:id="@+id/platina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/bcol"
                android:text="@string/platina"
                android:textColor="@color/botcol" />

            <RadioButton
                android:id="@+id/diamante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/bcol"
                android:text="@string/diamante"
                android:textColor="@color/botcol" />

            <RadioButton
                android:id="@+id/mestre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/bcol"
                android:text="@string/mestre"
                android:textColor="@color/botcol" />

            <RadioButton
                android:id="@+id/desafiante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/bcol"
                android:text="@string/desafiante"
                android:textColor="@color/botcol" />

        </RadioGroup>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/elo"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/bronze" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_alignStart="@+id/imageView2"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/silver" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_alignLeft="@+id/imageView3"
            android:layout_alignStart="@+id/imageView3"
            android:layout_below="@+id/imageView3"
            app:srcCompat="@drawable/gold" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_alignLeft="@+id/imageView4"
            android:layout_alignStart="@+id/imageView4"
            android:layout_below="@+id/imageView4"
            app:srcCompat="@drawable/platinum" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_alignLeft="@+id/imageView5"
            android:layout_alignStart="@+id/imageView5"
            android:layout_below="@+id/imageView5"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/diamond" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_alignLeft="@+id/imageView7"
            android:layout_alignStart="@+id/imageView7"
            android:layout_below="@+id/imageView7"
            android:layout_weight="1"
            app:srcCompat="@drawable/desafiante" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_alignLeft="@+id/imageView6"
            android:layout_alignStart="@+id/imageView6"
            android:layout_below="@+id/imageView6"
            app:srcCompat="@drawable/mestre" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/imageView2"
            android:layout_alignTop="@+id/textView3"
            android:layout_weight="1"
            android:text="@string/next" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="23dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_toLeftOf="@+id/textView3"
            android:layout_toStartOf="@+id/textView3"
            app:srcCompat="@drawable/zx" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
