<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gusta.myapplication.QuintaTela"
    android:background="@drawable/sem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="0dp">

            <GridLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </GridLayout>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:text="@string/per"
                android:textColor="@color/bcol"
                android:textSize="30sp" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/bcola"
                android:text="@string/buscar" />
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="39dp">

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="108dp"
                android:layout_height="67dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/red"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="53dp" />

            <LinearLayout
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="234dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nsm"
                    android:textColor="@color/bcola"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="105dp"
                    tools:layout_editor_absoluteY="72dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Level 30   "
                        android:textColor="@color/botcol"
                        tools:layout_editor_absoluteX="105dp"
                        tools:layout_editor_absoluteY="97dp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="|  Br"
                        android:textColor="@color/botcol"
                        tools:layout_editor_absoluteX="168dp"
                        tools:layout_editor_absoluteY="97dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="116dp"
                    android:layout_height="63dp"
                    app:srcCompat="@drawable/gold"
                    tools:layout_editor_absoluteX="294dp"
                    tools:layout_editor_absoluteY="63dp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ouro"
                    android:textColor="@color/bcola"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="67dp">

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suala"
                    android:textColor="@color/botcol"
                    tools:layout_editor_absoluteY="239dp" />

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="wrap_content"
                    android:layout_height="63dp"
                    app:srcCompat="@drawable/bot"
                    tools:layout_editor_absoluteX="82dp"
                    tools:layout_editor_absoluteY="182dp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/adc"
                    android:textColor="@color/bcol"
                    tools:layout_editor_absoluteX="95dp"
                    tools:layout_editor_absoluteY="275dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suald"
                    android:textColor="@color/botcol"
                    tools:layout_editor_absoluteX="218dp"
                    tools:layout_editor_absoluteY="239dp" />

                <ImageView
                    android:id="@+id/imageView24"
                    android:layout_width="wrap_content"
                    android:layout_height="63dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/mid"
                    tools:layout_editor_absoluteX="252dp"
                    tools:layout_editor_absoluteY="182dp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Mid"
                    android:textColor="@color/bcol"
                    tools:layout_editor_absoluteX="270dp"
                    tools:layout_editor_absoluteY="275dp" />
            </LinearLayout>

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_weight="1">

        </GridLayout>

        <LinearLayout
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </GridLayout>

            <CheckedTextView
                android:id="@+id/checkedTextView3"
                android:layout_width="117dp"
                android:layout_height="match_parent"

                android:layout_weight="1"
                android:onClick="editar"
                android:text="@string/edper"
                android:textColor="@color/cinza"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="414dp" />

            <CheckedTextView
                android:id="@+id/checkedTextView4"
                android:layout_width="9dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/d"
                android:textColor="@color/cinza"
                tools:layout_editor_absoluteX="270dp"
                tools:layout_editor_absoluteY="414dp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
