<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gusta.myapplication.TerceiraTela"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_above="@+id/radioGroup2"
            android:layout_alignLeft="@+id/radioGroup2"
            android:layout_alignStart="@+id/radioGroup2"
            android:layout_weight="1"
            app:srcCompat="@drawable/zx" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/radioGroup2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/qsl"
            android:textColor="@color/botcol"
            android:textSize="25sp" />

        <Button
            android:id="@+id/next"
            android:layout_width="65dp"
            android:layout_height="53dp"
            android:layout_above="@+id/imageView13"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/textView6"
            android:layout_toRightOf="@+id/textView6"
            android:layout_weight="1"
            android:drawableTint="@color/botcol"
            android:text="@string/next" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_above="@+id/imageView14"
            android:layout_alignLeft="@+id/imageView14"
            android:layout_alignStart="@+id/imageView14"
            android:layout_marginBottom="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/bot" android:contentDescription="TODO"/>

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_alignBottom="@+id/radioGroup2"
            android:layout_alignLeft="@+id/imageView11"
            android:layout_alignStart="@+id/imageView11"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sop"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="-63dp" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="208dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/mid" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_above="@+id/imageView11"
            android:layout_marginBottom="11dp"
            android:layout_marginLeft="145dp"
            android:layout_marginStart="145dp"
            android:layout_toEndOf="@+id/radioGroup2"
            android:layout_toRightOf="@+id/radioGroup2"
            android:layout_weight="1"
            app:srcCompat="@drawable/jg" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_above="@+id/imageView12"
            android:layout_alignLeft="@+id/imageView12"
            android:layout_alignStart="@+id/imageView12"
            android:layout_marginBottom="21dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/top"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="191dp" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/imageView13"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="21dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radiotop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView13"
                android:layout_alignLeft="@+id/radioGroup2"
                android:layout_alignStart="@+id/radioGroup2"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:buttonTint="@color/bcol"
                android:text="@string/top"
                android:textColor="@color/botcol" />

            <RadioButton
                android:id="@+id/radiojg"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_weight="1"
                android:buttonTint="@color/bcol"
                android:text="@string/jg"
                android:textColor="@color/botcol" />

            <RadioButton
                android:id="@+id/radiomid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/bcol"
                android:text="@string/Mid"
                android:textColor="@color/botcol" />

            <RadioButton
                android:id="@+id/radioadc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/bcol"
                android:text="@string/adc"
                android:textColor="@color/botcol" />

            <RadioButton
                android:id="@+id/radiosup"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/bcol"
                android:text="@string/sup"
                android:textColor="@color/botcol" />
        </RadioGroup>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
